# simulate

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  whitepaper.md  whitepaper_adaptive_sat_control_port.md
.claude/: settings.local.json
benchmarks/: benchmark.py  compare.py  workloads.py
example/: 01_dc_motor_speed_control.ipynb
examples/: 01_dc_motor_speed_control.ipynb  01_dc_motor_speed_control.py  02_rigid_body_attitude.py  03_nadir_pointing.py  03_nadir_pointing.yaml  03_nadir_pointing_adaptive_lqr.yaml  03_nadir_pointing_mpc.yaml  03_nadir_pointing_short.yaml  benchmark_rigid_body.py  dc_motor.py
examples/01_dc_motor/: __init__.py  config.yaml  dc_motor.py  notebook.py
examples/02_quadrocopter/: __init__.py  cascaded_control.yaml  drag.yaml  notebook.py  open_loop.yaml  quadrocopter.py  sensors.yaml
examples/03_satellite/: __init__.py  adaptive_lqr.yaml  controller.py  controller_models.py  estimator.py  mpc.yaml  notebook.py  quat_feedback.yaml  signals.py
src/rigid_body/: controller.py  controller_models.py  disturbances.py  effector.py  environment.py  estimator.py  frames.py  linearization.py  measurement.py  quaternion.py  reference.py  rigid_body.py  surface.py
src/simulate/: __init__.py  attitude.py  component.py  config.py  controller.py  dynamics.py  effector.py  estimator.py  experiment.py  integrator.py  linear_dynamics.py  linear_output.py  logger.py  main.py  measurement_model.py  output.py  plant.py  reference.py  rigid_body.py  sensor.py  simulation.py
src/simulate/logger/: __init__.py  base.py  memmap.py  ram.py
src/spacecraft/: controller.py  controller_models.py  disturbances.py  effector.py  environment.py  estimator.py  frames.py  measurement.py  orbit_dynamics.py  quaternion.py  reference.py  rigid_body.py  signals.py  surface.py
tests/: test_actuator_arrays.py  test_attitude.py  test_attitude_controller.py  test_components.py  test_config.py  test_effector.py  test_environment.py  test_estimator.py  test_experiment.py  test_frames.py  test_integrators.py  test_logger.py  test_logging_memory.py  test_main.py  test_measurement.py  test_measurement_channels.py  test_memmap_logger.py  test_nadir_pointing_config.py  test_quaternion.py  test_ram_logger.py  test_reference.py  test_rigid_body.py  test_rigid_body_output.py  test_simulation.py  test_vectorized_disturbances.py
tests/differential/: conftest.py  diffhelpers.py  test_controllers_diff.py  test_disturbances_diff.py  test_dynamics_diff.py  test_environment_diff.py  test_estimator_diff.py  test_frames_diff.py  test_symbolic_dynamics_diff.py  whitepaper_adaptive_sat_control_port.md
tests/differential/adaptive-satellite-control/: README.md
tests/differential/adaptive-satellite-control/src/: main.py  simulation_config.json  utils.py
tests/differential/adaptive-satellite-control/src/flight_software/: controller_models.py  controllers.py  estimators.py
tests/differential/adaptive-satellite-control/src/simulation/: actuators.py  disturbances.py  dynamics.py  environment.py  kinematics.py  satellite.py  sensors.py  surface.py
