[project]
name = "simulate"
version = "0.1.0"
description = "Simulation framework for control systems"
authors = [
    {name = "Max Frankenberg", email = "frankenbergmax57@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.13.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pandas-stubs>=3.0.0.260204",
    "polars>=1.41.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "tqdm>=4.68.1",
    "types-pyyaml>=6.0.12.20260508",
    "types-tqdm>=4.68.0.20260608",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0", # Added for coverage reporting
    "ruff>=0.3.0",
    "pre-commit>=3.0.0",
    "validate-pyproject>=0.23",
    "marimo>=0.23.6",
    "scalene>=2.3.0",
    "ty>=0.0.46",
]
spacecraft = [
    "astropy>=7.2.0",
    "casadi>=3.7.2",
    "pyigrf>=0.3.3",
    "pymap3d>=3.2.0",
    "pymsis>=0.12.0",
    "scipy>=1.17.1",
    "sgp4>=2.25",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.12"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-name = ["simulate", "spacecraft"]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    "tests/differential/adaptive-satellite-control",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "FIX",    # for comments like TODO, FIXME
    "TD",     # for structure of TODO comments
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "COM812", # Trailing comma missing (conflicts with formatter)
    "ISC001", # Single line implicit string concatenation (conflicts with formatter)
]

[tool.ruff.lint.isort]
# Ensures imports are grouped logically
known-first-party = ["simulate", "spacecraft"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert
    "PLR0913", # too-many-arguments
    "F401",    # unused import
    "ARG001",  # Unused function args (fixtures)
    "PLR2004", # Magic value used in comparison
    "D",       # Ignore docstrings in tests
    "INP001",  # No __init__.py in tests folder
]
# Differential port tests live in a nested folder (not matched by "tests/*") and intentionally
# compare across two codebases, poking private members and using math-style variable names.
"tests/differential/*.py" = [
    "S101",    # assert
    "PLR0913", # too-many-arguments
    "F401",    # unused import
    "ARG001",  # Unused function args (fixtures)
    "PLR2004", # Magic value used in comparison
    "D",       # Ignore docstrings in tests
    "INP001",  # No __init__.py in tests folder
    "SLF001",  # private members are deliberately exercised on both sides
    "N802",    # legacy names like `_continuous_FG`
    "N803",    # math argument names (J_B, R_BO, ...)
    "N806",    # math local names (A, B, Q, R, F, G, ...)
    "PLC0415", # cross-repo imports are done lazily via importorskip inside tests
    "ANN401",  # legacy/duck-typed objects from the old repo are necessarily typed `Any`
]
"examples/*" = ["INP001"]
# Marimo notebooks: cells are functions, imports live in cells, and the final
# expression of a cell is the displayed output.
"examples/[0-9]*.py" = [
    "ANN001",   # missing type annotation for cell args (marimo passes refs untyped)
    "ANN202",   # missing return type for cell `_` functions
    "PLC0415",  # imports inside cells (marimo idiom)
    "B018",     # last expression renders the cell output (e.g. `fig`)
    "PLR1711",  # useless return statements (marimo adds them; not all cells need return)
    "ICN001",   # marimo requires private imports like _pd/_plt to avoid cell namespace clashes
    "N803",     # marimo cell arguments can be CamelCase class names
    "PLR0913",  # too many arguments in cell function definitions
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
# Usually, keeping the comma helps with cleaner diffs in git
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
# Added -v for more detail and --cov to integrate coverage
addopts = "-ra -q -v --cov=simulate --cov=spacecraft"
testpaths = ["tests"]

[tool.ty]

[tool.ty.src]
exclude = ["examples/[0-9]*.py", "tests/differential/adaptive-satellite-control"]

[tool.ty.rules]
# In ty, you control strictness by setting individual rules to "error", "warn", or "ignore".

invalid-assignment = "error"         # Assigning an incompatible type to a variable
invalid-argument-type = "error"      # Passing the wrong type to a function
invalid-return-type = "error"        # Returning a value that doesn't match the function's return annotation
unresolved-import = "error"          # Importing a module that cannot be found
unresolved-attribute = "error"       # Accessing an attribute that doesn't exist on that object type
unresolved-reference = "error"       # Using an undefined variable or name

possibly-missing-import = "error"    # Strict import resolution
unused-ignore-comment = "warn"       # Flagging a '# ty: ignore' comment that isn't doing anything
unused-type-ignore-comment = "warn"  # Flagging a standard '# type: ignore' that isn't doing anything
ignore-comment-unknown-rule = "warn" # Warns you if you try to ignore a rule that doesn't exist

index-out-of-bounds = "error"        # Static bounds checking on indexable collections (like tuples)
division-by-zero = "error"           # Catching literal division by zero statically
not-iterable = "error"               # Trying to use a non-iterable object in a loop
not-subscriptable = "error"          # Trying to index an object that doesn't support it

[[tool.ty.overrides]]
include = ["examples/[0-9]*.py"]
rules = { unresolved-reference = "ignore" }
